# codeflix-python-back-end

./: .gitignore  .pylintrc  Dockerfile  README.md  docker-compose.override.yaml  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
docker/: entrypoint.sh
docker/zsh/powerlevel10k/: .p10k.zsh
src/__seedwork/: exceptions.py  value_objects.py
src/__seedwork/domain/: entities.py  exceptions.py  validators.py  value_objects.py
src/__seedwork/tests/integration/domain/: test_int_validators.py
src/__seedwork/tests/unit/domain/: test_unit_entities.py  test_unit_validators.py  test_unit_value_objects.py
src/category/: entities.py
src/category/domain/: entities.py  validators.py
src/category/tests/domain/: test_entities.py
src/category/tests/integration/domain/: test_int_entities.py  test_int_validators.py
src/category/tests/unit/domain/: test_entities.py  test_unit_validators.py
