[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Francisco Guilherme", email = "franciscoguilherme.mundo@outlook.com"},
]
dependencies = [
    "autopep8>=2.0.2",
]
requires-python = ">=3.10.2"
readme = "README.md"
license = {text = "MIT"}

[project.urls]
Homepage = ""
[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
