[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Francisco Guilherme", email = "franciscoguilherme.mundo@outlook.com"},
]
dependencies = [
]
requires-python = ">=3.10.2"
readme = "README.md"
license = {text = "MIT"}

[project.urls]
Homepage = ""
[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"

[tool.pdm.dev-dependencies]
dev = [
    "autopep8>=2.0.2",
]
