[project]
name = "clean-arch-ddd-python"
version = "1.0.0"
description = ""
authors = [
    { name = "Francisco Guilherme", email = "franciscoguilherme.mundo@outlook.com" },
]
dependencies = []
requires-python = ">=3.10.2"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"

[tool.pdm.dev-dependencies]
dev = [
    "autopep8>=2.0.2",
    "pylint>=2.17.5",
    "pytest>=7.4.0",
]
